<resources>
    <string name="app_name">True Style</string>
    <string-array name="countries" formatted="false" translatable="false">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Canary Islands</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Ceuta and Melilla</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo [DRC]</item>
        <item>Congo [Republic]</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curaçao</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Côte d’Ivoire</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Europe</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latin America</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia [FYROM]</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar [Burma]</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Réunion</item>
        <item>Saint Barthélemy</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Sint Maarten</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>São Tomé and Príncipe</item>
        <item>Taiwan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turks and Caicos Islands</item>
        <item>U.S. Outlying Islands</item>
        <item>U.S. Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>Åland Islands</item>
    </string-array>
    <string-array name="seasons">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn</item>
        <item>Inter-seasonal</item>
        <item>Choose</item>
    </string-array>
    <string-array name="genders">
        <item>Man</item>
        <item>Woman</item>
        <item>Choose</item>
    </string-array>
    <string-array name="categories_stuff">
        <item>Бейсболка</item>
        <item>Блуза</item>
        <item>Брюки</item>
        <item>Бюстгальтер</item>
        <item>Ветровка</item>
        <item>Джемпер</item>
        <item>Джинсы</item>
        <item>Жилет</item>
        <item>Комбинезон</item>
        <item>Купальник</item>
        <item>Куртка</item>
        <item>Майка</item>
        <item>Мешок</item>
        <item>Носки</item>
        <item>Пальто</item>
        <item>Перчатки</item>
        <item>Пиджак</item>
        <item>Плавки</item>
        <item>Платье</item>
        <item>Рубашка</item>
        <item>Рюкзак</item>
        <item>Свитер</item>
        <item>Сумка</item>
        <item>Леггинсы</item>
        <item>Топ</item>
        <item>Футболка</item>
        <item>Халат</item>
        <item>Худи</item>
        <item>Шапка</item>
        <item>Шорты</item>
        <item>Шуба</item>
        <item>Юбка</item>
    </string-array>
    <string name="soon_update">Will be available in the next update!</string>
    <string name="wait">Please, wait</string>
    <string name="title_recommendation">Recommendation</string>
    <string name="title_clothes_search">Search</string>
    <string name="title_articles">Articles</string>
    <string name="title_profile">Profile</string>
    <string name="title_technical_support">Technical support</string>
    <string name="title_get_recommendation">Get recommendation</string>
    <string name="title_add_clothes">Add clothes</string>
    <string name="title_article">Article</string>
    <string name="title_articles_in_topic">Articles in topic</string>
    <string name="title_login">Login</string>
    <string name="title_registration">Registration</string>
    <string name="title_password_reset">Password reset</string>
    <string name="title_set_new_password">Set new password</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="title_settings">Settings</string>
    <string name="title_setting">Setting</string>
    <string name="terms_and_privacy_policy"><b>Terms &#38; Conditions</b> and <b>Privacy Policy</b></string>
    <string name="title_wardrobe">Wardrobe</string>
    <string name="fragment_clothes">Clothes</string>
    <string name="content_description_ic_plus">Make photo</string>
    <string name="example_quote">Fashion is a game to be played seriously</string>
    <string name="tech_support">Support</string>
    <string name="estimate">Estimate</string>
    <string name="subscribe">Subscribe</string>
    <string name="partners">Partners</string>
    <string name="title_recommendation_articles">Style</string>
    <string name="title_recommendation_clothes">Recommended</string>
    <string name="image_clothes">Image clothes</string>
    <string name="button_add_to_wardrobe">Add to wardrobe</string>
    <string name="button_where_buy">Where to buy?</string>
    <string name="button_load_photo">Select from Gallery</string>
    <string name="button_make_photo">Make photo</string>
    <string name="row_user_country">Country</string>
    <string name="back">Back</string>
    <string name="quit">Quit</string>
    <string name="username">Username</string>
    <string name="error_username">The username is already in use</string>
    <string name="edit_profile">Profile editing</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="user_style_edit_profile">User style</string>
    <string name="soon_edit_profile">Soon!</string>
    <string name="edit">Edit</string>
    <string name="change_username">Change username</string>
    <string name="apply">Apply</string>
    <string name="edit_user_info">Edit profile</string>
    <string name="edit_user_style">Edit style</string>
    <string name="title_style">Style</string>
    <string name="update_app">Update</string>
    <string name="is_necessary_update"><b>A cool update is out!</b> Please update the app!\nWe try to make it easier to use the application for you!</string>
    <string name="is_not_necessary_update"><b>An awesome update is out!</b>\nWould you like to update the application?</string>
    <string name="confirm_quit">Sign out?</string>
    <string name="confirm">Yes</string>
    <string name="load_photo_with">Load photo with</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>