<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isNecessary"
            type="Boolean" />
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/background_dialog_fragment"
        android:padding="@dimen/padding_layout_dialog_fragment">

        <ImageView
            android:layout_width="@dimen/width_image_new_version"
            android:layout_height="@dimen/width_image_new_version"
            android:src="@drawable/ic_update_app"
            android:contentDescription="@string/is_necessary_update"/>

        <TextView
            android:id="@+id/text_view_new_version"
            style="@style/textTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_new_version"
            android:text="@{isNecessary ?  @string/is_necessary_update : @string/is_not_necessary_update}"
            tools:text="@string/is_not_necessary_update"
            android:layout_margin="@dimen/margin_window"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/button_update"
            style="@style/buttonStyle.LightBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/update_app"/>

    </LinearLayout>
</layout>